--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://cdn.jsdelivr.net" />
     <link href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" rel="stylesheet">
     <title>게하 앱 - 예약 관리</title>
+    <!-- Eruda 모바일 디버거 -->
+    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+    <script>eruda.init();</script>
   </head>
   <body>
     <div id="root"></div>
