--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <link rel="preconnect" href="https://cdn.jsdelivr.net" />
-    <link href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
+      rel="stylesheet"
+    />
     <title>게하 앱 - 예약 관리</title>
-    <!-- Eruda 모바일 디버거 -->
-    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
-    <script>eruda.init();</script>
+
+    <!-- Eruda: 환경변수 기반 조건 로드 -->
+    <script>
+      if ('%VITE_ENABLE_ERUDA%' === 'false') {
+        const s = document.createElement('script')
+        s.src = 'https://cdn.jsdelivr.net/npm/eruda'
+        s.onload = () => window.eruda && window.eruda.init()
+        document.head.appendChild(s)
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
